--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "clientOutreachEmail",
+    "name": "email-campaign",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
