--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
-    "name": "email-campaign",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "airtable": "^0.10.1",
-        "axios": "^0.21.1",
-        "dotenv": "^8.2.0",
-        "mailshake-node": "^2.0.0",
-        "moment": "^2.29.1"
-    }
+  "name": "email-campaign",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "airtable": "^0.10.1",
+    "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
+    "mailshake-node": "^2.0.0",
+    "moment": "^2.29.1"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Rtroman14/emailCampaign.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Rtroman14/emailCampaign/issues"
+  },
+  "homepage": "https://github.com/Rtroman14/emailCampaign#readme",
+  "description": ""
 }
